--- a/src/organizadores-section.html
+++ b/src/organizadores-section.html
@@ -19,6 +19,7 @@
     <script>
         function abrirNovaAba(url) {
             window.open(url, '_blank');
+            console.log("oi")
         }
     </script>
     
